--- a/FileStorage/FileStorage.csproj
+++ b/FileStorage/FileStorage.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B4332724-CA19-453F-94F3-5688F608A338}</ProjectGuid>
+    <ProjectGuid>{3472C8C0-5B0E-409B-B1FC-93262CDD0746}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>StudyAssistModel</RootNamespace>
-    <AssemblyName>StudyAssistModel</AssemblyName>
+    <RootNamespace>FileStorage</RootNamespace>
+    <AssemblyName>FileStorage</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,21 +40,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="XModel.cs" />
+    <Compile Include="IStorageItem.cs" />
+    <Compile Include="XStorage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="XCategory.cs" />
-    <Compile Include="XProblem.cs" />
-    <Compile Include="XTheme.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\FileStorage\FileStorage.csproj">
-      <Project>{3472c8c0-5b0e-409b-b1fc-93262cdd0746}</Project>
-      <Name>FileStorage</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\StudyAssistInterfaces\StudyAssistInterfaces.csproj">
-      <Project>{a2cd8d0d-a85b-488f-9ac5-5922ac8cef21}</Project>
-      <Name>StudyAssistInterfaces</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
