--- a/StudyAssistIoC/StudyAssistIoC.csproj
+++ b/StudyAssistIoC/StudyAssistIoC.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B4332724-CA19-453F-94F3-5688F608A338}</ProjectGuid>
+    <ProjectGuid>{22948EA6-C8B2-4C3E-9F3D-D3FEE3D6E4A0}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>StudyAssistModel</RootNamespace>
-    <AssemblyName>StudyAssistModel</AssemblyName>
+    <RootNamespace>StudyAssistIoC</RootNamespace>
+    <AssemblyName>StudyAssistIoC</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,6 +30,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Ninject, Version=3.2.0.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
+      <HintPath>..\packages\Ninject.3.2.2.0\lib\net45-full\Ninject.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -40,11 +44,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="XModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="XCategory.cs" />
-    <Compile Include="XProblem.cs" />
-    <Compile Include="XTheme.cs" />
+    <Compile Include="XKernel.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FileStorage\FileStorage.csproj">
@@ -54,6 +58,10 @@
     <ProjectReference Include="..\StudyAssistInterfaces\StudyAssistInterfaces.csproj">
       <Project>{a2cd8d0d-a85b-488f-9ac5-5922ac8cef21}</Project>
       <Name>StudyAssistInterfaces</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\StudyAssistModel\StudyAssistModel.csproj">
+      <Project>{b4332724-ca19-453f-94f3-5688f608a338}</Project>
+      <Name>StudyAssistModel</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
