--- a/StudyAssistModel/StudyAssistModel.csproj
+++ b/StudyAssistModel/StudyAssistModel.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>StudyAssistModel</RootNamespace>
     <AssemblyName>StudyAssistModel</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -40,11 +41,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Class1.cs" />
     <Compile Include="XModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="XCategory.cs" />
     <Compile Include="XProblem.cs" />
-    <Compile Include="XStadySheduler.cs" />
     <Compile Include="XTheme.cs" />
   </ItemGroup>
   <ItemGroup>
