--- a/StudyAssistModel/StudyAssistModel.csproj
+++ b/StudyAssistModel/StudyAssistModel.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="Class2.cs" />
     <Compile Include="XModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="XCategory.cs" />
