# Немного переделал вкладку Всё

--- a/StudyAssist/StudyAssist.csproj
+++ b/StudyAssist/StudyAssist.csproj
@@ -59,6 +59,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="BooleanInvertor.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
     <Compile Include="ViewModel\XBaseViewModel.cs" />
     <Compile Include="ViewModel\XCategoryVM.cs" />
