--- a/StudyAssistModel/StudyAssistModel.csproj
+++ b/StudyAssistModel/StudyAssistModel.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="RepeatDateCalculator.cs" />
     <Compile Include="XModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="XCategory.cs" />
