--- a/StudyAssist/Properties/Settings.settings
+++ b/StudyAssist/Properties/Settings.settings
@@ -1,7 +1,9 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="uri:settings" CurrentProfile="(Default)">
-  <Profiles>
-    <Profile Name="(Default)" />
-  </Profiles>
-  <Settings />
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="StudyAssist.Properties" GeneratedClassName="Settings">
+  <Profiles />
+  <Settings>
+    <Setting Name="DefaultCategories" Type="System.String" Scope="User">
+      <Value Profile="(Default)">C# SOLID Паттерны</Value>
+    </Setting>
+  </Settings>
 </SettingsFile>
